# mcp-voice-dispatcher

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/mcp_server/: index.js  lib.js  lib.test.js
src/mcp_voice_dispatcher/: __init__.py  audio.py  audio_ingest.py  cli.py  config.py  dispatcher.py  mcp_client.py  models.py  observability.py  prompts.py  router.py  routing_guardrails.py  transcriber.py  web.py
src/mcp_voice_dispatcher/web/: app.js  index.html  style.css
tests/: test_audio_ingest.py  test_dispatcher.py  test_mcp_client_pool.py  test_mcp_stdio.py  test_models.py  test_prompts.py  test_routing_guardrails.py  test_web_api.py
